--- a/src/app/prikaz-dodatnih-info-fudbalera/prikaz-dodatnih-info-fudbalera.component.html
+++ b/src/app/prikaz-dodatnih-info-fudbalera/prikaz-dodatnih-info-fudbalera.component.html
@@ -5,7 +5,7 @@
     <th> Prezime</th>
     <th> Pozicija</th>
     <th> Datum rodjenja</th>
-    <th> Zemlja rodjenja</th>
+    <th> ZemljaQL rodjenja</th>
   </tr>
   </thead>
   <tbody>
