--- a/src/app/prikaz-igraca/prikaz-igraca.component.html
+++ b/src/app/prikaz-igraca/prikaz-igraca.component.html
@@ -26,7 +26,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -46,7 +46,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -66,7 +66,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -86,7 +86,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -106,7 +106,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -125,7 +125,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -145,7 +145,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -165,7 +165,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -184,7 +184,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -203,7 +203,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
@@ -221,7 +221,7 @@
                   <ul class="player__card__list">
                     <li><span>Ime i Prezime</span><br>{{igrac.ime + ' ' + igrac.prezime}}</li>
                     <li><span>Datum rodjenja</span><br>{{igrac.datumRodjenja}}</li>
-                    <li><span>Zemlja rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
+                    <li><span>ZemljaQL rodjenja</span><br>{{igrac.zemljaRodjenja}}</li>
                   </ul>
                 </div>
                 <div class="player__label"
