--- a/src/app/prikaz-klubova/prikaz-klubova.component.html
+++ b/src/app/prikaz-klubova/prikaz-klubova.component.html
@@ -155,3 +155,6 @@
     <h3> {{bod}} </h3>
   </div>
 </div>
+<div *ngFor="let r of this.rezultatiKlubaQL | async" [hidden]="true">
+  <h6>{{r.id}}</h6>
+</div>
